Fix alignment issues

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ nav {
   justify-content: center;
 }
 
-.flex-container{
+.flex-container {
   display: flex;
   flex-wrap: wrap;
   gap: 63.58px;
@@ -277,6 +277,12 @@ nav {
   row-gap: 40px;
   margin-left: 24px;
   margin-right: 24px;
+  justify-content: center;
+}
+
+.portfolio-works article {
+  display: flex;
+  flex-direction: column;
 }
 
 .portfolio-works img {
